--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -44,4 +44,5 @@ bind -r L resize-pane -R 5
 # Disable mouse support
 set -g mouse off
 
-
+# Style the window bar
+set -g status-style fg=colour109,bg=colour111
