more tmux config updates

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -45,4 +45,30 @@ bind -r L resize-pane -R 5
 set -g mouse off
 
 # Style the window bar
-set -g status-style fg=colour109,bg=colour111
+set -g status-style fg=colour234,bg=colour111
+
+# Style the active window tab
+setw -g window-status-style fg=colour252,bg=colour97
+
+# Style the pane borders
+setw -g pane-border-style fg=colour122
+setw -g pane-active-border-style fg=colour193
+
+# Style the message bar
+set -g message-style fg=colour252,bg=colour97
+
+# Status line left side to show Session:window:pane
+set -g status-left-length 40
+
+# Set the content of the left side of the status bar
+set -g status-left "#[fg=colour234][#[fg=colour252]#S#[fg=colour97]#I#[fg=colour122]#P#[fg=colour234]] "
+
+# Set the content of the right side of the status bar
+set -g status-right "#h • %A %F"
+
+# Update the status line every sixty seconds
+set -g status-interval 60
+
+# Enable activity alerts
+setw -g monitor-activity on
+set -g visual-activity on
