style active tmux window in status bar

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -47,8 +47,9 @@ set -g mouse off
 # Style the window bar
 set -g status-style fg=colour234,bg=colour111
 
-# Style the active window tab
-setw -g window-status-style fg=colour252,bg=colour97
+# Style the window tabs
+setw -g window-status-style fg=colour97,bg=colour111
+setw -g window-status-current-style fg=colour252,bg=colour97
 
 # Style the pane borders
 setw -g pane-border-style fg=colour122
