--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -73,3 +73,6 @@ set -g status-interval 60
 # Enable activity alerts
 setw -g monitor-activity on
 set -g visual-activity on
+
+# Enable vi keys
+setw -g mode-keys vi
