Update tmux pane creation key bindings

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -22,8 +22,8 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind C-a send-prefix
 
 # Splitting panes with | and -
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 # Moving between panes with Prefix h,j,k,l
 bind h select-pane -L
@@ -76,3 +76,10 @@ set -g visual-activity on
 
 # Enable vi keys
 setw -g mode-keys vi
+
+# Prefix Ctrl-C takes what's in the buffer and sends it to system clipboard via xclip
+bind C-c run "tmux save-buffer - | xclip -sel clip -i"
+
+# Prefix Ctrl-v fills tmux buffer from system clipboard via xclip, then
+# pastes from buffer into tmux window
+bind C-v run "tmux set-buffer \"$(xclip -sel clip -o)\"; tmux paste-buffer"
