--- a/dotfiles/config/alacritty.yml
+++ b/dotfiles/config/alacritty.yml
@@ -3,7 +3,10 @@ font:
     family: "Dank Mono"
   bold:
     family: "Dank Mono"
+  italic: 
+    family: "Dank Mono"
   size: 14.0
+
 colors:
   primary:
     background: "0x011627"
@@ -17,3 +20,12 @@ colors:
     magenta: '0xC792EA'
     cyan:    '0x7FDBCA'
     white:   '0xAAAAAA'
+
+window:
+  title: Terminal
+  dynamic_title: true
+
+bell:
+  animation: EaseOutExpo
+  color: '0xffffff'
+  duration: 2
