adjust tmux configuration

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -3,17 +3,34 @@ set -g prefix C-a
 unbind C-b
 
 # Set the color mode to 256 and enable true color support
-set -g default-terminal "xterm-256color"
-set -ag terminal-overrides ',xterm-256color:Tc'
+# https://github.com/alacritty/alacritty/issues/109#issuecomment-507026155
+set  -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",alacritty:RGB,xterm-256color:RGB,gnome*:RGB"
+
+# Enable undercurl
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colors - needs tmux-3.0
 
 # Setting the delay between prefix and command
-set -s escape-time 1
+set -s escape-time 0
 
 # Set the base index for windows to 1 instead of 0
 set -g base-index 1
 
 # Set the base index for panes to 1 instead of 0
 setw -g pane-base-index 1
+
+# Allow automatic renaming of windows
+set -g allow-rename on
+
+# Allow tmux to set the terminal title
+set -g set-titles on
+
+# Monitor window activity to display in the status bar
+setw -g monitor-activity on
+
+# Renumber windows when one is removed.
+set -g renumber-windows on
 
 # Reload the file with Prefix r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
@@ -45,27 +62,28 @@ bind -r L resize-pane -R 5
 set -g mouse off
 
 # Style the window bar
-set -g status-style fg=colour234,bg=colour111
+set-option -g status-style "fg=#637777 bg=#011627"
 
 # Style the window tabs
-setw -g window-status-style fg=colour97,bg=colour111
-setw -g window-status-current-style fg=colour252,bg=colour97
+set-option -g window-status-current-style "fg=#d6deeb"
+set-option -g window-status-format "#{window_index}:#{window_name}#{window_flags} "
+set-option -g window-status-current-format "#{window_index}:#{window_name}#{window_flags} "
+set-option -g window-status-activity-style none
 
-# Style the pane borders
-setw -g pane-border-style fg=colour122
-setw -g pane-active-border-style fg=colour193
+# # Style the pane borders
+# setw -g pane-border-style fg=colour122
+# setw -g pane-active-border-style fg=colour193
 
 # Style the message bar
-set -g message-style fg=colour252,bg=colour97
+set -g message-style "fg=#D6DEEB bg=#1D3B53"
 
-# Status line left side to show Session:window:pane
-set -g status-left-length 40
+# Style the left side of the status bar
+set-option -g status-left-length 100
+set-option -g status-left "#{session_name} "
 
-# Set the content of the left side of the status bar
-set -g status-left "#[fg=colour234][#[fg=colour252]#S#[fg=colour97]#I#[fg=colour122]#P#[fg=colour234]] "
-
-# Set the content of the right side of the status bar
-set -g status-right "#h • %A %F"
+# Style the right side of the status bar
+set-option -g status-right-length 100
+set -g status-right " #{pane_title} " 
 
 # Update the status line every sixty seconds
 set -g status-interval 60
@@ -83,3 +101,8 @@ bind C-c run "tmux save-buffer - | xclip -sel clip -i"
 # Prefix Ctrl-v fills tmux buffer from system clipboard via xclip, then
 # pastes from buffer into tmux window
 bind C-v run "tmux set-buffer \"$(xclip -sel clip -o)\"; tmux paste-buffer"
+
+# Set the current working directory based on the current pane's current
+# working directory (if set; if not, use the pane's starting directory)
+# when creating # new windows and splits.
+bind-key c new-window -c '#{pane_current_path}'
