change tmux panel border colors

--- a/conf/tmux/tmux.conf
+++ b/conf/tmux/tmux.conf
@@ -70,9 +70,9 @@ set-option -g window-status-format "#{window_index}:#{window_name}#{window_flags
 set-option -g window-status-current-format "#{window_index}:#{window_name}#{window_flags} "
 set-option -g window-status-activity-style none
 
-# # Style the pane borders
-# setw -g pane-border-style fg=colour122
-# setw -g pane-active-border-style fg=colour193
+# Style the pane borders
+setw -g pane-border-style "fg=#1d3b53"
+setw -g pane-active-border-style "fg=#80a4c2"
 
 # Style the message bar
 set -g message-style "fg=#D6DEEB bg=#1D3B53"
